# code-augmentor

./: .gitattributes  .gitignore  README.md  build.gradle  package-lock.json  package.json  sample-request.xml  sample-response.xml  sample-result.xml  settings.gradle  signing-notes.txt  todo.txt  tsconfig.json  version-change-notes.txt
ant-plugin/: build.gradle  pom.xml
ant-plugin-parent/: pom.xml
app/: build.gradle
backlog/: build.gradle
code-augmentor/: build.gradle
code-augmentor-ant/: README.md  build.gradle
code-augmentor-app/: build.gradle
code-augmentor-core/: README.md  build.gradle
code-augmentor-gradle/: README.md  build.gradle
code-augmentor-groovy-support/: build.gradle
code-augmentor-maven/: .gitignore  README.md  build.gradle  pom.xml
core/: build.gradle
examples/: post-build-script.bat  post-build-script.sh
gradle-plugin/: build.gradle
maven-plugin/: pom.xml
plugin-templates/: AntComplete-generated.txt  AntConfig.groovy  AntPrepare-generated.txt  CompleteTemplate.txt  GradleComplete-generated.txt  GradleConfig.groovy  GradlePrepare-generated.txt  MavenComplete-generated.txt  MavenConfig.groovy  MavenPrepare-generated.txt  MavenProcess-generated.txt  PrepareTemplate.txt  ProcessTemplate.txt
process-aug-code-tests/: .gitignore  LocalConfig.groovy.sample  README.md  Snippets.js  (+9 more)
supporting-packages/python3/codeaugmentor-support/: pyproject.toml
supporting-packages/python3/codeaugmentor-support/codeaugmentor_support/: models.py  tasks.py
supporting-packages/python3/codeaugmentor-support/tests/: test_codeaugmentor_support.py
(+873 files in other folders)
