[tool.poetry]
name = "codeaugmentor_support"
version = "0.1.0"
description = ""
authors = ["Aaron Baffour-Awuah <aaronbaffourawuah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
